# Marketingmaschine

./: .dockerignore  .gitignore  Dockerfile  Master-Strategie-WAMOCON-v2.0.html  Master-Strategie-WAMOCON-v2.0.md  README.md  bot_architektur.json  master_strategie_wamocon_marketing_maschine.md  pyproject.toml
Kampagnen/: kampagne_1_consulting_qa.json  kampagne_2_ki_sokrates.json  kampagne_3_lfa_azubis.json  kampagne_4_mitarbeiter.json  kampagne_5_app_entwicklung.json
Zielgruppen/: zielgruppe_1_itleiter.json  zielgruppe_2_recruiterin.json  zielgruppe_3_qaengineer.json  zielgruppe_4_azubi_fiae.json  zielgruppe_5_b2b_ki.json
config/: agents.json  evidence-vault.json  governance-policy.json  integrations.example.env  mcp-allowlist.json  model-routing.json  operating-rhythm.json
db/: schema.sql
deploy/: docker-compose.core.yml  docker-compose.existing-stack.yml  docker-compose.growth-tools.yml  docker-compose.network-access.yml  growth-tools.env.example  marketing-agent.env.example
docs/: WAMOCON-MARKETING-HANDBOOK.md  WAMOCON-Marketing-Handbuch.docx  architecture.md  compliance-guardrails.md  deployment-stack.md  end-user-workflow.md  evidence-vault.md  growth-creative-integration-acceptance.md  growth-tools.md  network-access.md  operations-runbook.md  remote-project-runbook.md  resource-allocation.md  system-validation-2026-06-30.md  system-validation-2026-07-13.md  system-validation-2026-07-14.md  testing-and-optimization.md
scripts/: build_release_archive.py  check_kimi_anthropic.py  check_kimi_chat.py  check_openai_compatible.py  clean_test_data.py  (+9 more)
(+53 files in other folders)
