[project]
name = "wamocon-marketing-machine"
version = "0.1.0"
description = "Governed always-on AI marketing operating system scaffold for WAMOCON."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "WAMOCON" }]
dependencies = []

[project.optional-dependencies]
prod = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "langgraph>=0.4",
  "langchain>=0.3",
  "langgraph-checkpoint-postgres>=2.0",
  "psycopg[binary]>=3.2",
  "openai>=1.0"
]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
